enqueue action configuration by action parameters

--- a/installer/helm/chart/volcano/config/volcano-scheduler-ci.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler-ci.conf
@@ -1,4 +1,11 @@
-actions: "enqueue, reclaim, allocate, backfill, preempt"
+actions:
+- name: enqueue
+  arguments:
+    enqueue-action-idleres-mul: 1.2
+- name: allocate
+- name: backfill
+- name: reclaim
+- name: preempt
 tiers:
 - plugins:
   - name: priority
