--- a/installer/volcano-development.yaml
+++ b/installer/volcano-development.yaml
@@ -11,7 +11,14 @@ metadata:
   namespace: volcano-system
 data:
   volcano-scheduler-ci.conf: |
-    actions: "enqueue, reclaim, allocate, backfill, preempt"
+    actions:
+    - name: enqueue
+      arguments:
+        enqueue-action-idleres-mul: 1.2
+    - name: allocate
+    - name: backfill
+    - name: reclaim
+    - name: preempt
     tiers:
     - plugins:
       - name: priority
@@ -23,7 +30,12 @@ data:
       - name: proportion
       - name: nodeorder
   volcano-scheduler.conf: |
-    actions: "enqueue, allocate, backfill"
+    actions:
+    - name: enqueue
+      arguments:
+        enqueue-action-idleres-mul: 1.2
+    - name: allocate
+    - name: backfill
     tiers:
     - plugins:
       - name: priority
