rebased,changed action config similar to plug in config and backword compatable

--- a/installer/helm/chart/volcano/config/volcano-scheduler-ci.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler-ci.conf
@@ -1,4 +1,11 @@
-actions: "enqueue, reclaim, allocate, backfill, preempt"
+actions:
+- name: enqueue
+  arguments:
+    enqueue-action-idleres-mul: 1.2
+- name: allocate
+- name: backfill
+- name: reclaim
+- name: preempt
 tiers:
 - plugins:
   - name: priority
@@ -9,5 +16,3 @@ tiers:
   - name: predicates
   - name: proportion
   - name: nodeorder
-action-arguments:
-    enqueue-action-idleres-mul: 1.2
