--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -1,4 +1,9 @@
-actions: "enqueue, allocate, backfill"
+actions:
+- name: enqueue
+  arguments:
+    enqueue-action-idleres-mul: 1.2
+- name: allocate
+- name: backfill
 tiers:
 - plugins:
   - name: priority
@@ -9,5 +14,3 @@ tiers:
   - name: predicates
   - name: proportion
   - name: nodeorder
-action-arguments:
-    enqueue-action-idleres-mul: 1.2
