Fixed version comment

--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -1,7 +1,8 @@
+version: v2
 actions:
 - name: enqueue
   arguments:
-    enqueue-action-idleres-mul: 1.2
+    idleres-mul: 1.2
 - name: allocate
 - name: backfill
 tiers:
