--- a/installer/volcano-development.yaml
+++ b/installer/volcano-development.yaml
@@ -11,10 +11,11 @@ metadata:
   namespace: volcano-system
 data:
   volcano-scheduler-ci.conf: |
+    version: v2
     actions:
     - name: enqueue
       arguments:
-        enqueue-action-idleres-mul: 1.2
+        idleres-mul: 1.2
     - name: allocate
     - name: backfill
     - name: reclaim
@@ -30,10 +31,11 @@ data:
       - name: proportion
       - name: nodeorder
   volcano-scheduler.conf: |
+    version: v2
     actions:
     - name: enqueue
       arguments:
-        enqueue-action-idleres-mul: 1.2
+        idleres-mul: 1.2
     - name: allocate
     - name: backfill
     tiers:
